# media-mcp

./: .gitignore  .mcp.json  CLAUDE.md  GOAL.md  README.md  pyproject.toml
.claude/: settings.json
.specify/memory/: constitution.md
specs/001-media-mcp-server/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-media-mcp-server/checklists/: requirements.md
specs/001-media-mcp-server/contracts/: mcp-tools.md
specs/002-stdio-uvx-readme/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-stdio-uvx-readme/checklists/: requirements.md
specs/002-stdio-uvx-readme/contracts/: mcp-client-config.md
src/media_mcp/: config.py  server.py
src/media_mcp/tools/: image.py  music.py  speech.py  video.py
src/media_mcp/utils/: audio.py  media.py
tests/: conftest.py  test_generate_image.py  test_generate_music.py  test_generate_speech.py  test_generate_video.py
